.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
12:20:20 **** Incremental Build of configuration Debug for project Parcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\menu.o" "..\\src\\menu.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\RelacionProductosUsuarios.o" "..\\src\\RelacionProductosUsuarios.c" 
gcc -o Parcial.exe "src\\Parcial.o" "src\\RelacionProductosUsuarios.o" "src\\arrayProducto.o" "src\\arrayUsuario.o" "src\\funcionesPropias.o" "src\\menu.o" "src\\utn.o" 
Info: Nothing to build for TP_2
Info: Nothing to build for Parcial
12:24:51 **** Incremental Build of configuration Debug for project Parcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\menu.o" "..\\src\\menu.c" 
gcc -o Parcial.exe "src\\Parcial.o" "src\\RelacionProductosUsuarios.o" "src\\arrayProducto.o" "src\\arrayUsuario.o" "src\\funcionesPropias.o" "src\\menu.o" "src\\utn.o" 
Info: Nothing to build for Parcial
13:17:43 **** Incremental Build of configuration Debug for project Parcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Parcial.o" "..\\src\\Parcial.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\RelacionProductosUsuarios.o" "..\\src\\RelacionProductosUsuarios.c" 
..\src\RelacionProductosUsuarios.c: In function 'alta_Producto':
..\src\RelacionProductosUsuarios.c:28:22: error: incompatible types when assigning to type 'int' from type 'Usuario {aka struct <anonymous>}'
     aux.Fk_idUsuario = arrayUsuario[indice];
                      ^
13:18:29 **** Incremental Build of configuration Debug for project Parcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\menu.o" "..\\src\\menu.c" 
..\src\menu.c: In function 'menu':
..\src\menu.c:155:6: error: too few arguments to function 'printTodo'
      printTodo(listUsuario,lenUsuario);
      ^~~~~~~~~
..\src\menu.c:9:13: note: declared here
 static void printTodo(Usuario* listUsuario , int lenUsuario,Producto* listProducto,int lenProducto){
             ^~~~~~~~~
13:19:26 **** Incremental Build of configuration Debug for project Parcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\RelacionProductosUsuarios.o" "..\\src\\RelacionProductosUsuarios.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\menu.o" "..\\src\\menu.c" 
gcc -o Parcial.exe "src\\Parcial.o" "src\\RelacionProductosUsuarios.o" "src\\arrayProducto.o" "src\\arrayUsuario.o" "src\\funcionesPropias.o" "src\\menu.o" "src\\utn.o" 
Info: Nothing to build for Parcial
13:27:53 **** Incremental Build of configuration Debug for project Parcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\RelacionProductosUsuarios.o" "..\\src\\RelacionProductosUsuarios.c" 
In file included from ..\src\RelacionProductosUsuarios.c:2:0:
..\src\RelacionProductosUsuarios.h:11:49: error: conflicting types for 'list'
 void harcodeo(Producto * list,int len,Usuario * list,int len);
                                                 ^~~~
..\src\RelacionProductosUsuarios.h:11:26: note: previous definition of 'list' was here
 void harcodeo(Producto * list,int len,Usuario * list,int len);
                          ^~~~
..\src\RelacionProductosUsuarios.h:11:58: error: redefinition of parameter 'len'
 void harcodeo(Producto * list,int len,Usuario * list,int len);
                                                          ^~~
..\src\RelacionProductosUsuarios.h:11:35: note: previous definition of 'len' was here
 void harcodeo(Producto * list,int len,Usuario * list,int len);
                                   ^~~
..\src\RelacionProductosUsuarios.c:4:49: error: conflicting types for 'list'
 void harcodeo(Producto * list,int len,Usuario * list,int len){
                                                 ^~~~
..\src\RelacionProductosUsuarios.c:4:26: note: previous definition of 'list' was here
 void harcodeo(Producto * list,int len,Usuario * list,int len){
                          ^~~~
..\src\RelacionProductosUsuarios.c:4:58: error: redefinition of parameter 'len'
 void harcodeo(Producto * list,int len,Usuario * list,int len){
                                                          ^~~
..\src\RelacionProductosUsuarios.c:4:35: note: previous definition of 'len' was here
 void harcodeo(Producto * list,int len,Usuario * list,int len){
                                   ^~~
..\src\RelacionProductosUsuarios.c: In function 'harcodeo':
..\src\RelacionProductosUsuarios.c:33:27: error: incompatible type for argument 3 of 'eUsuario_Alta'
  eUsuario_Alta(list, len, aux);
                           ^~~
In file included from ..\src\RelacionProductosUsuarios.h:7:0,
                 from ..\src\RelacionProductosUsuarios.c:2:
..\src\arrayUsuario.h:46:5: note: expected 'Usuario {aka struct <anonymous>}' but argument is of type 'Producto {aka struct <anonymous>}'
 int eUsuario_Alta(Usuario *list, int len,Usuario usuarioDarAlta);
     ^~~~~~~~~~~~~
..\src\RelacionProductosUsuarios.c:43:17: warning: passing argument 1 of 'eProducto_Alta' from incompatible pointer type [-Wincompatible-pointer-types]
  eProducto_Alta(list, len, aux);
                 ^~~~
In file included from ..\src\RelacionProductosUsuarios.h:6:0,
                 from ..\src\RelacionProductosUsuarios.c:2:
..\src\arrayProducto.h:46:5: note: expected 'Producto * {aka struct <anonymous> *}' but argument is of type 'Usuario * {aka struct <anonymous> *}'
 int eProducto_Alta(Producto *list, int len,Producto productoDarAlta);
     ^~~~~~~~~~~~~~
..\src\RelacionProductosUsuarios.c:52:17: warning: passing argument 1 of 'eProducto_Alta' from incompatible pointer type [-Wincompatible-pointer-types]
  eProducto_Alta(list, len, aux);
                 ^~~~
In file included from ..\src\RelacionProductosUsuarios.h:6:0,
                 from ..\src\RelacionProductosUsuarios.c:2:
..\src\arrayProducto.h:46:5: note: expected 'Producto * {aka struct <anonymous> *}' but argument is of type 'Usuario * {aka struct <anonymous> *}'
 int eProducto_Alta(Producto *list, int len,Producto productoDarAlta);
     ^~~~~~~~~~~~~~
..\src\RelacionProductosUsuarios.c:61:17: warning: passing argument 1 of 'eProducto_Alta' from incompatible pointer type [-Wincompatible-pointer-types]
  eProducto_Alta(list, len, aux);
                 ^~~~
In file included from ..\src\RelacionProductosUsuarios.h:6:0,
                 from ..\src\RelacionProductosUsuarios.c:2:
..\src\arrayProducto.h:46:5: note: expected 'Producto * {aka struct <anonymous> *}' but argument is of type 'Usuario * {aka struct <anonymous> *}'
 int eProducto_Alta(Producto *list, int len,Producto productoDarAlta);
     ^~~~~~~~~~~~~~
..\src\RelacionProductosUsuarios.c:70:17: warning: passing argument 1 of 'eProducto_Alta' from incompatible pointer type [-Wincompatible-pointer-types]
  eProducto_Alta(list, len, aux);
                 ^~~~
In file included from ..\src\RelacionProductosUsuarios.h:6:0,
                 from ..\src\RelacionProductosUsuarios.c:2:
..\src\arrayProducto.h:46:5: note: expected 'Producto * {aka struct <anonymous> *}' but argument is of type 'Usuario * {aka struct <anonymous> *}'
 int eProducto_Alta(Producto *list, int len,Producto productoDarAlta);
     ^~~~~~~~~~~~~~
13:29:58 **** Incremental Build of configuration Debug for project Parcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Parcial.o" "..\\src\\Parcial.c" 
..\src\Parcial.c: In function 'main':
..\src\Parcial.c:17:2: warning: implicit declaration of function 'harcodeoUsuario' [-Wimplicit-function-declaration]
  harcodeoUsuario(arrayUsuario, TAM_USUARIO);
  ^~~~~~~~~~~~~~~
..\src\Parcial.c:21:2: warning: implicit declaration of function 'harcodeoProducto' [-Wimplicit-function-declaration]
  harcodeoProducto(arrayProducto, TAM_PRODUCTO);
  ^~~~~~~~~~~~~~~~
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\arrayUsuario.o" "..\\src\\arrayUsuario.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\menu.o" "..\\src\\menu.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\arrayProducto.o" "..\\src\\arrayProducto.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\RelacionProductosUsuarios.o" "..\\src\\RelacionProductosUsuarios.c" 
gcc -o Parcial.exe "src\\Parcial.o" "src\\RelacionProductosUsuarios.o" "src\\arrayProducto.o" "src\\arrayUsuario.o" "src\\funcionesPropias.o" "src\\menu.o" "src\\utn.o" 
src\Parcial.o: In function `main':
C:\Users\fedec\Downloads\utn\programacion1\inputs\Parcial\Debug/../src/Parcial.c:17: undefined reference to `harcodeoUsuario'
C:\Users\fedec\Downloads\utn\programacion1\inputs\Parcial\Debug/../src/Parcial.c:21: undefined reference to `harcodeoProducto'
collect2.exe: error: ld returned 1 exit status
13:30:55 **** Incremental Build of configuration Debug for project Parcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Parcial.o" "..\\src\\Parcial.c" 
gcc -o Parcial.exe "src\\Parcial.o" "src\\RelacionProductosUsuarios.o" "src\\arrayProducto.o" "src\\arrayUsuario.o" "src\\funcionesPropias.o" "src\\menu.o" "src\\utn.o" 
Info: Nothing to build for Parcial
13:37:20 **** Incremental Build of configuration Debug for project Parcial ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\arrayProducto.o" "..\\src\\arrayProducto.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\menu.o" "..\\src\\menu.c" 
gcc -o Parcial.exe "src\\Parcial.o" "src\\RelacionProductosUsuarios.o" "src\\arrayProducto.o" "src\\arrayUsuario.o" "src\\funcionesPropias.o" "src\\menu.o" "src\\utn.o" 
Info: Nothing to build for Parcial
